// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton checked should render an disabled radio button 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="RadioButton-name-value"
>
  <FlexComponent
    align="center"
    className="some-class"
    noGutters={true}
  >
    <FlexItemComponent
      shrink={true}
    >
      <input
        checked={true}
        className="radio visibility--a11yHide"
        disabled={false}
        id="RadioButton-name-value"
        name="name"
        otherProp="other"
        readOnly={true}
        type="radio"
        value="value"
      />
      <span
        className="display--flex flex--alignCenter flex--center align--center fauxToggle fauxToggle--radio checked"
      >
        <span
          className="radio-indicator"
        />
      </span>
    </FlexItemComponent>
    <FlexItemComponent
      className="toggleLabel-container"
      shrink={true}
    >
      <span
        className="text--bold"
      >
        This is a label
      </span>
    </FlexItemComponent>
  </FlexComponent>
</label>
`;

exports[`RadioButton checked should render an enabled radio button 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="RadioButton-name-value"
>
  <FlexComponent
    align="center"
    className="some-class"
    noGutters={true}
  >
    <FlexItemComponent
      shrink={true}
    >
      <input
        checked={true}
        className="radio visibility--a11yHide"
        disabled={true}
        id="RadioButton-name-value"
        name="name"
        otherProp="other"
        readOnly={true}
        type="radio"
        value="value"
      />
      <span
        className="display--flex flex--alignCenter flex--center align--center fauxToggle fauxToggle--radio checked disabled"
      >
        <span
          className="radio-indicator"
        />
      </span>
    </FlexItemComponent>
    <FlexItemComponent
      className="toggleLabel-container"
      shrink={true}
    >
      <span
        className="text--hint text--bold"
      >
        This is a label
      </span>
    </FlexItemComponent>
  </FlexComponent>
</label>
`;

exports[`RadioButton unchecked should render an disabled radio button 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="RadioButton-name-value"
>
  <FlexComponent
    align="center"
    className="some-class"
    noGutters={true}
  >
    <FlexItemComponent
      shrink={true}
    >
      <input
        checked={false}
        className="radio visibility--a11yHide"
        disabled={false}
        id="RadioButton-name-value"
        name="name"
        otherProp="other"
        readOnly={true}
        type="radio"
        value="value"
      />
      <span
        className="display--flex flex--alignCenter flex--center align--center fauxToggle fauxToggle--radio"
      />
    </FlexItemComponent>
    <FlexItemComponent
      className="toggleLabel-container"
      shrink={true}
    >
      <span
        className=""
      >
        This is a label
      </span>
    </FlexItemComponent>
  </FlexComponent>
</label>
`;

exports[`RadioButton unchecked should render an enabled radio button 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="RadioButton-name-value"
>
  <FlexComponent
    align="center"
    className="some-class"
    noGutters={true}
  >
    <FlexItemComponent
      shrink={true}
    >
      <input
        checked={false}
        className="radio visibility--a11yHide"
        disabled={true}
        id="RadioButton-name-value"
        name="name"
        otherProp="other"
        readOnly={true}
        type="radio"
        value="value"
      />
      <span
        className="display--flex flex--alignCenter flex--center align--center fauxToggle fauxToggle--radio disabled"
      />
    </FlexItemComponent>
    <FlexItemComponent
      className="toggleLabel-container"
      shrink={true}
    >
      <span
        className="text--hint"
      >
        This is a label
      </span>
    </FlexItemComponent>
  </FlexComponent>
</label>
`;
